--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,4 +4,4 @@ play.http.secret.key=${?PLAY_SECRET}
 play.i18n.langs = [ "en" ]
 
 // tell Play that we are going to use compile-time DI by specifying the application loader
-play.application.loader = "AppApplicationLoader"
+play.application.loader = "AppLoader"
